# Problem-Solver

./: AStar.h  BFS.h  BestFirstSearch.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  ClientHandler.h  DFS.h  FileCacheManager.cpp  FileCacheManager.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  ObjectAdapter.cpp  ObjectAdapter.h  README.md  Searcheable.h  SearcheableMatrix.cpp  SearcheableMatrix.h  Searcher.h  Server.h  Solver.h  State.h  StringReverser.cpp  StringReverser.h  Vertax.cpp  Vertax.h  astar.txt  bestfs.txt  bfs.txt  dfs.txt  git_log.txt  main.cpp  matrix.txt  solve.txt
